--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,8 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Travelog
-author: Your name
+title: My Blog  
+author: ADAMKE
 author_link: https://whatever.you/like
 author_description: A few words to describe you & your face
 email: your-email@domain.com
